--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -96,7 +96,7 @@
     <!-- 페이징처리 끝 -->
     <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
 </div>
-<form id="searchForm" method="get" action="{{ url_for('question._list') }}">
+<form id="searchForm" method="get" action="{{ url_for('question.classify', category=category ) }}" >
     <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
