--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -35,7 +35,7 @@
           <div class="col-6 d-flex justify-content-between align-self-center search">
               &nbsp;
               <span class="font-weight-bold align-self-center pl-3"> <a href="{{ url_for('question.classify', category='general') }}">자유게시판</a></span>
-              <span class="dropdown topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='anonymous') }}">정보게시판</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='anonymous') }}">정보게시판</a></span>
               <span class="dropdown topic align-self-center pl-3"> <a href="#" style="color:black">홍보게시판</a></span>
               <span class="dropdown topic align-self-center pl-3"> <a href="#" style="color:black">메타버스</a></span>
               <span class="dropdown topic align-self-center pl-3"> <a href="#" style="color:black">시사이슈</a></span>
@@ -68,8 +68,8 @@
                       <div class="col-6">
                         <span>Categories</span>
                          <ul class="px-3 categories">
-                           <li><a href="#">자유게시판</a></li>
-                           <li><a href="#">정보게시판</a></li>
+                           <li><a href="{{ url_for('question.classify', category='general') }}">자유게시판</a></li>
+                           <li><a href="{{ url_for('question.classify', category='anonymous') }}">정보게시판</a></li>
                            <li><a href="#">시사,이슈</a></li>
                          </ul>
                       </div>
@@ -123,6 +123,5 @@
    </header>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
   </html>
