Edit value-id in question_form

--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -44,18 +44,17 @@
                             <option value=103>학생회관</option>
                             <option value=206>컨퍼런스홀</option>
                             <option value=208>실용영어교육관</option>
-                            <option value=208>학술정보관</option>
-                            <option value=208>실용영어교육관</option>
+                            <option value=401>학술정보관</option>
                             <option value=209>제1학술관</option>
-                            <option value=209>라이언스홀</option>
+                            <option value=316>라이언스홀</option>
                         </optgroup>
-                        <optgroup label="공학관">
+                        <optgroup label="공학/소프트/약학">
                             <option value=301>제1공학관</option>
                             <option value=104>제2공학관</option>
                             <option value=303>제3공학관</option>
                             <option value=304>제4공학관</option>
                             <option value=305>제5공학관</option>
-                            <option value=305>소프트웨어융합대학</option>
+                            <option value=311>소프트웨어융합대학</option>
                             <option value=309>약학관</option>
                         </optgroup>
                         <optgroup label="상경/문화/언론/사회대학">
