--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+    <h5 class="my-3 border-bottom pb-2">게시글 등록</h5>
     <form method="post" class="post-form my-3">
         {{ form.csrf_token }}
         <!-- 오류표시 Start -->
@@ -83,7 +83,7 @@
             <textarea class="form-control" name="content"
                       id="content" rows="10">{{ form.content.data or '' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">저장하기</button>
+        <button type="submit" class="btn btn-primary">작성</button>
     </form>
 </div>
 
