--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -111,9 +111,10 @@
         </ul>
         <!-- 페이징처리 끝 -->
         {% if category != "favor" %}
-            <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
+            <a href="{{ url_for('question.create') }}" class="btn btn-primary">게시물 작성</a>
+            <a href="{{ url_for('question.create_favor') }}" class="btn btn-info" >품앗이 요청</a>
         {% else %}
-            <a href="{{ url_for('question.create_favor') }}" class="btn btn-primary" >도움 요청하기</a>
+            <a href="{{ url_for('question.create_favor') }}" class="btn btn-info" >품앗이 요청</a>
         {%endif %}
     </div>
 </div>
