Apply design by theme color

--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -22,12 +22,12 @@
           </div>
           <div class="col-6 d-flex justify-content-between align-self-center search">
               &nbsp;
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='general') }}" style="color : #8c6239" >자유게시판</a></span>
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='information') }}" style="color : #8c6239" >정보게시판</a></span>
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='promotion') }}" style="color : #8c6239">홍보게시판</a></span>
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='metaverse') }}" style="color : #8c6239">메타버스</a></span>
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='issue') }}" style="color : #8c6239">시사이슈</a></span>
-              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='favor') }}" style="color : #8c6239">품앗이</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='general') }}" style="color : #512a0a" >자유게시판</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='information') }}" style="color : #512a0a" >정보게시판</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='promotion') }}" style="color : #512a0a">홍보게시판</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='metaverse') }}" style="color : #512a0a">메타버스</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='issue') }}" style="color : #512a0a">시사이슈</a></span>
+              <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='favor') }}" style="color : #512a0a">품앗이</a></span>
               &nbsp;
             </div>
             <div class="col-4">
