--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -53,7 +53,7 @@
                     {% endif %}
                 </td>
                 <td class="text-left">
-                    <a href="{{ url_for('question.detail', question_id=question.id) }}" style="color : #8c6239">{{ question.subject }}</a>
+                    <a href="{{ url_for('question.detail', question_id=question.id) }}" style="color : #512a0a">{{ question.subject }}</a>
                     {% if question.answer_set|length > 0 %}
                     <span class="text-danger small ml-2">{{ question.answer_set|length }}</span>
                     {% endif %}
@@ -88,8 +88,8 @@
                         <a class="page-link" data-page="{{ page_num }}" href="#">{{ page_num }}</a>
                     </li>
                     {% else %}
-                    <li class="page-item active" aria-current="page">
-                        <a class="page-link" href="#">{{ page_num }}</a>
+                    <li class="page-item"  aria-current="page" >
+                        <a class="page-link" href="#" style="background-color: #ffc009; color:white">{{ page_num }}</a>
                     </li>
                     {% endif %}
                {% else %}
@@ -111,10 +111,10 @@
         </ul>
         <!-- 페이징처리 끝 -->
         {% if category != "favor" %}
-            <a href="{{ url_for('question.create') }}" class="btn btn-primary">게시물 작성</a>
-            <a href="{{ url_for('question.create_favor') }}" class="btn btn-info" >품앗이 요청</a>
+            <a href="{{ url_for('question.create') }}" class="btn btn-warning" style="background-color: #ffc009; color:white">게시물 작성</a>
+            <a href="{{ url_for('question.create_favor') }}" class="btn btn-warning" style="background-color: #ffa300; color:white">품앗이 요청</a>
         {% else %}
-            <a href="{{ url_for('question.create_favor') }}" class="btn btn-info" >품앗이 요청</a>
+            <a href="{{ url_for('question.create_favor') }}" class="btn btn-warning" style="background-color: #ffa300; color:white">품앗이 요청</a>
         {%endif %}
     </div>
 </div>
