--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -30,8 +30,8 @@
               <span class="font-weight-bold topic align-self-center pl-3"> <a href="{{ url_for('question.classify', category='favor') }}" style="color : #512a0a">품앗이</a></span>
               &nbsp;
             </div>
-            <div class="col-4">
-              <div class="row">
+            <div class="col-4" style="padding-top: 3px">
+              <div class="row ">
                 <div class="dropdown topic align-self-center pl-3">
                      &nbsp;
                   <button class="btn px-2" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
