--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -83,7 +83,7 @@
             <textarea class="form-control" name="content"
                       id="content" rows="10">{{ form.content.data or '' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">작성</button>
+        <button type="submit" class="btn btn-warning" style="background-color: #ffa300; color:white" >작성</button>
     </form>
 </div>
 
