--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -36,7 +36,7 @@
                     <div class="d-flex justify-content-end">
                         {% if question.modify_date %}
                         <div class="badge badge-light p-2 text-left mx-3">
-                            <div class="mb-2">modified at</div>
+                            <div class="mb-2">수정됨</div>
                             <div>{{ question.modify_date|datetime }}</div>
                         </div>
                         {% endif %}
@@ -75,16 +75,12 @@
                     {% endfor %}
                     </div>
                     {% endif %}
-                    <div>
-                        <a href="{{ url_for('comment.create_question', question_id=question.id) }}"
-                           class="small"><small>댓글 추가 ..</small></a>
-                    </div>
                     <!-- 질문 댓글 End -->
                 </div>
             </div>
         </div>
     </div>
-    <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
+    <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 댓글이 있습니다.</h5>
     {% for answer in question.answer_set %}
     <a name="answer_{{ answer.id }}"></a>
     <div class="row my-3">
@@ -141,7 +137,7 @@
                     {% endif %}
                     <div>
                         <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}"
-                           class="small"><small>댓글 추가 ..</small></a>
+                           class="small"><small>대댓글 추가 ..</small></a>
                     </div>
                     <!-- 답변 댓글 End -->
                 </div>
@@ -162,7 +158,7 @@
             <textarea {% if not g.user %}disabled{% endif %}
                     name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input type="submit" value="답변등록" class="btn btn-primary">
+        <input type="submit" value="댓글 등록" class="btn btn-warning" style="background-color: #ffa300; color:white">
     </form>
 </div>
 {% endblock %}
