--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -16,7 +16,11 @@
             </div>
         </nav>
     </div>
+
     <div class="col-sm-12 col-md-9 col-lg-10 p-2">
+        {% if category_name %}
+        <h5 class="border-bottom pb-2 mb-3"><b>&nbsp;{{category_name}}</b></h5>
+        {% endif %}
         <div class="row justify-content-between my-3">
             <div class="col-2">
                 <select class="form-control so">
