--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -86,13 +86,8 @@
                           <li><a href="#"><i class="fas fa-sign-out-alt px-3 text-muted"></i></a></li>
                         </ul>
                         <ul class="mb-0 pl-0 py-3">
-                          <li><a href="#"><p class="mb-1">Dashboard</p></a></li>
-                          <li><a href="#"><p class="mb-1">Badges</p></a></li>
-                          <li><a href="#"><p class="mb-1">My Grpups</p></a></li>
-                          <li><a href="#"><p class="mb-1">Notifications</p></a></li>
-                          <li><a href="#"><p class="mb-1">Topics</p></a></li>
-                          <li><a href="#"><p class="mb-1">Likes</p></a></li>
-                          <li><a href="#"><p class="mb-1">Solved</p></a></li>
+                          <li><a href="{{ url_for('mypage.mypage') }}"><p class="mb-1">마이페이지</p></a></li>
+                          <li><a href="#"><p class="mb-1">뱃지</p></a></li>
                         </ul>
                       </div>
                     </div>
